Определил структуру проекта, добавил dbContext

--- a/SharelyTodoList/appsettings.Development.json
+++ b/SharelyTodoList/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "InMemoryDb": {
+    "Name": "sharely-todo-list-db"
   }
 }
