--- a/SharelyTodoList/appsettings.json
+++ b/SharelyTodoList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "InMemoryDb": {
+    "Name": "Имя базы данных inMemory"
+  }
 }
