--- a/SharelyTodoList/SharelyTodoList.csproj
+++ b/SharelyTodoList/SharelyTodoList.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Repositories\" />
+    <Folder Include="Interfaces\Services\" />
+  </ItemGroup>
+
 </Project>
